feat: add api-doc for /api/admin/users
